@@ -1,3 +1,7 @@
+2005-02-23	blytkerchan	adding partial deque implementation
+	* deque.c: new file
+	* deque.h: ditto
+
 2004-10-28	blytkerchan
 	* array.c: canonicalize the arch-specific includes
 	canonicalize libmemory includes
